# image-jupyter-base

./: .gitignore  CustomChanges.md  Dockerfile  LICENSE  README.md  ToDo.md  docker-compose.yml  environment.yml  requirements.txt  requirements_conda.txt  workspace.json
config/: .condarc  jupyter_notebook_config.py  jupyter_server_config.py  overrides.json
crash_ext/: pyproject.toml
crash_ext/crash_ext/: __init__.py
jupyterfg/: pyproject.toml
jupyterfg/jupyterfg/: EmbedHTMLExporter.py  __main__.py  convert.py  execute.py  save.py  status.py
jupyterlab-expose/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  install.json  package.json  setup.py  tsconfig.json
jupyterlab-expose/.github/workflows/: build.yml
jupyterlab-expose/src/: index.ts
jupyterlab-quit/: README.md  package.json
jupyterlab-quit/src/: index.ts
save_state_ext/: pyproject.toml  readme.md
save_state_ext/save_state_ext/: __init__.py
