[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "jupyterfg"
author = "FASTGenomics Team"
author-email = "contact@fastgenomics.org"
requires=[
    "nbconvert",
    "nbformat",
    "lxml",
]

[tool.flit.entrypoints."nbconvert.exporters"]
html_embed = "jupyterfg.EmbedHTMLExporter:EmbedHTMLExporter"
