[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "jupyterfg"
author = "FASTGenomics Team"
author-email = "contact@fastgenomics.org"
requires=[
    "nbconvert",
    "nbformat",
    "lxml",
]

[tool.flit.entrypoints."nbconvert.exporters"]
html_embed = "jupyterfg.EmbedHTMLExporter:EmbedHTMLExporter"
